--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -46,6 +46,7 @@
   border: 2px solid black;
   box-shadow: 3px 4px 5px gray;
   margin-bottom: 1.5rem;
+  margin-top: .4rem;
 }
 
 #submitSignUpBtn:hover {
